# Detic

./: .gitignore  .gitmodules  Dockerfile  README.md  app.py  build.py  demo.py  demo_box.py  embedding_matrix_lvis.pt  generate_masks.py  hubconf.py  imagenet_class_info.json  lazy_train_net.py  mask_utils.py  match_word.py  parallel.py  predict.py  pyproject.toml  requirements.txt  setup.py  train_net.py  v1_mask_generate.sh  vocab_names_lvis.npy  wn_dict.npy
.github/workflows/: docker.yaml
configs/: BoxSup_ViLD_200e.py  Detic_BBN_CLIP_SwinB_896b32_4x_ft4x_max-size.yaml  Detic_EGOHOS_CLIP_SwinB_896b32_4x_ft4x_max-size.yaml  Detic_SSV2_CLIP_SwinB_896b32_4x_ft4x_max-size.yaml  Detic_SSV2_small_CLIP_SwinB_896b32_4x_ft4x_max-size.yaml  Detic_ViLD_200e.py
datasets/: README.md
datasets/metadata/: M2_Tourniquet.npy  M2_Tourniquet_val_cat_count.json  M5_X-Stat.npy  M5_X-Stat_train_cat_count.json  categories_VAL_1k.json  egohos.npy  egohos_test_indomain_cat_count.json  egohos_test_outdomain_cat_count.json  egohos_train_cat_count.json  egohos_val_cat_count.json  ssv2_clip512.npy  ssv2_clip_RN50_a+cname.npy  ssv2_train_cat_info.json
detic/: __init__.py  config.py  custom_solver.py  fix_detectron2.py  inference.py  predictor.py
detic/data/: __init__.py  custom_build_augmentation.py  custom_dataset_dataloader.py  custom_dataset_mapper.py  tar_dataset.py
detic/data/datasets/: cc.py  coco_zeroshot.py  egohos.py  egohos2.py  egohos_coco.py  imagenet.py  lvis_22k_categories.py  lvis_v1.py  objects365.py  (+10 more)
detic/evaluation/: custom_coco_eval.py  oideval.py
detic/modeling/: debug.py  utils.py
docs/: INSTALL.md  MODEL_ZOO.md
tools/: Reverse Detic.ipynb  convert-thirdparty-pretrained-model-to-d2.py  create_egohos_coco.py  create_imagenetlvis_json.py  create_lvis_21k.py  download_cc.py  dump_clip_features.py  fix_o365_names.py  fix_o365_path.py  get_cc_tags.py  get_coco_zeroshot_oriorder.py  get_imagenet_21k_full_tar_json.py  get_lvis_cat_info.py  merge_lvis_coco.py  preprocess_imagenet22k.py  remove_lvis_rare.py  unzip_imagenet_lvis.py
(+18 files in other folders)
