[tool.poetry]
name = "detic"
version = "0.0.1"
description = "Detecting Twenty-thousand Classes using Image-level Supervision"
authors = ["Masaya Kataoka <ms.kataoka@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0"
mss = "^9.0.1"
timm = "^0.9.2"
dataclasses = "^0.6"
ftfy = "^6.1.1"
regex = "^2023.3.23"
clip = {git = "https://github.com/openai/CLIP.git", rev = "a9b1bf5920416aaeaec965c25dd9e8f98c864f16"} # commit hash for 2023/1/21
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.1%2Bcu118-cp310-cp310-linux_x86_64.whl" }
centernet = {git = "https://github.com/OUXT-Polaris/CenterNet2.git", rev = "master"}
deformable-detr = {git = "https://github.com/OUXT-Polaris/Deformable-DETR.git", rev = "main"}
fasttext-wheel = "^0.9.2"
scikit-learn = "^1.2.2"
lvis = "^0.5.3"
nltk = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dev-dependencies]
pip = "*"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"